<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.vinaymusic.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/music" />

        <TextView
            android:id="@+id/nowPlaying"
            style="@style/mainActivityText"
            android:text="@string/now_playing" />

        <TextView
            android:id="@+id/favourites"
            style="@style/mainActivityText"
            android:text="@string/favorites" />

        <TextView
            android:id="@+id/playlist"
            style="@style/mainActivityText"
            android:text="@string/playlist" />

        <TextView
            android:id="@+id/allSongs"
            style="@style/mainActivityText"
            android:text="@string/all_songs" />

        <TextView
            android:id="@+id/artist"
            style="@style/mainActivityText"
            android:text="@string/artist" />

        <TextView
            android:id="@+id/buyMusic"
            style="@style/mainActivityText"
            android:text="@string/buy_music" />

    </LinearLayout>
</ScrollView>