<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.vinaymusic.NowPlayingActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:scaleType="centerCrop"
        android:src="@drawable/thallipogathey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/nowPlayingSongText"
            android:text="@string/song_title" />

        <TextView
            style="@style/nowPlayingSongArtist"
            android:text="@string/artist_name" />

        <TextView
            style="@style/nowPlayingSongAlbum"
            android:text="@string/Album_title" />
    </LinearLayout>


</LinearLayout>
